Preload ALL images, not just last

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <div class="ver dizhitl">V0.4.19.24<br>Not affiliated with Rutgers University</div>
 
-    <img class="preload none">
+    <div class="preload none"><div>
 
 </body>
 </html>
