Initial mobile support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/colors.css">
     <link rel="stylesheet" href="css/positioning.css">
     <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/mobile/mobile.css">
 
     <link href="https://fonts.cdnfonts.com/css/minguwest" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/dizhitl" rel="stylesheet">
@@ -33,7 +34,7 @@
 
     <div class="splash minguwest center flex flex-column ai-center jc-center">
 
-        <div class="flex ai-center">
+        <div class="logo-wrap flex ai-center">
             <img src="favicon.png" width="50" style="margin-right: 1rem;">
             <div class="huge-font text-white">RutgersGuessr</div>
         </div>
@@ -43,7 +44,9 @@
 
     <div class="game hidden">
 
-        <div class="game-image"></div>
+        <div class="flex jc-center">
+            <div class="game-image"></div>
+        </div>
 
         <div class="mid-wrapper">
             <div class="confirm adlinnaka none pointer select-none">CONFIRM</div>
