Fix game img centered on desktop, prevent mobile img hover

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="game hidden">
 
-        <div class="flex jc-center">
+        <div class="game-image-wrapper flex">
             <div class="game-image"></div>
         </div>
 
