Mobile layout rearrangement, fix overscroll on home

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
     <div class="game hidden">
 
         <div class="game-image-wrapper flex">
-            <div class="game-image"></div>
+            <div class="giw-2 fixed z-401">
+                <div class="flex jc-center">
+                    <div class="game-stats-mobile none center font-1p2rem dizhitl">
+                        <div class="round">ROUND x/5</div> | <div class="points">0 points</div>
+                    </div>
+                </div>
+                <div class="game-image"></div>
+            </div>
         </div>
 
         <div class="mid-wrapper">
@@ -54,8 +61,8 @@
         </div>
 
         <div class="game-stats center">
-            <div class="round adlinnaka">ROUND x/5</div>
-            <div class="points dizhitl">0 points</div>
+            <div class="round font-1p5rem adlinnaka">ROUND x/5</div>
+            <div class="points font-1p2rem dizhitl">0 points</div>
         </div>
         <div class="directions dizhitl">Select a point on the map to make your guess!</div>
         
@@ -63,7 +70,7 @@
 
     </div>
 
-    <div class="finished none flex flex-column ai-center jc-center">
+    <div class="finished none flex-column ai-center jc-center fixed w-full">
 
         <div class="game-stats-title minguwest text-white huge-font none">Game Stats</div>
         <div class="finish-stats dizhitl text-white p-2">
