--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     </div>
 
-    <div class="finished none flex-column ai-center jc-center fixed w-full">
+    <div class="finished none flex-column ai-center jc-center fixed w-full pointer">
 
         <div class="game-stats-title minguwest text-white huge-font none">Game Stats</div>
         <div class="finish-stats dizhitl text-white p-2">
