Change size instead of opacity on mobile tap, increase logo size

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="splash minguwest center flex flex-column ai-center jc-center">
 
         <div class="logo-wrap flex ai-center">
-            <img src="favicon.png" width="50" style="margin-right: 1rem;">
+            <img class="favicon" src="favicon.png" width="50" style="margin-right: 1rem;">
             <div class="huge-font text-white">RutgersGuessr</div>
         </div>
         <div class="large-font text-white play-btn p-2 px-10 rounded pointer select-none" onclick="startGame()">PLAY</div>
@@ -45,7 +45,7 @@
     <div class="game hidden">
 
         <div class="game-image-wrapper flex">
-            <div class="giw-2 fixed z-401">
+            <div class="giw-2 fixed z-401 flex flex-column ai-center">
                 <div class="flex jc-center">
                     <div class="game-stats-mobile none center font-1p2rem dizhitl">
                         <div class="round">ROUND x/5</div> | <div class="points">0 points</div>
