Fix uncentered home favicon logo, remove debug prints

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="splash minguwest center flex flex-column ai-center jc-center">
 
         <div class="logo-wrap flex ai-center">
-            <img class="favicon" src="favicon.png" width="50" style="margin-right: 1rem;">
+            <img class="favicon mr-1rem" src="favicon.png" width="50">
             <div class="huge-font text-white">RutgersGuessr</div>
         </div>
         <div class="large-font text-white play-btn p-2 px-10 rounded pointer select-none" onclick="startGame()">PLAY</div>
