Add new user tips

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
 
     </div>
 
+    <div class="welcome-wrap none">
+
+        <div class="welcome">
+
+            <div class="welcome-title minguwest">Welcome to RUGuessr!</div>
+
+            <ul class="tips dizhitl">
+
+                <li>You'll be shown photos of the Rutgers New Brunswick campus</li>
+                <li>Select <under>where the photo was taken from</under> on the map, <under>not what it's of</under></li>
+                <li>Earn more points the closer you are. Each game has 5 rounds!</li>
+
+            </ul>
+
+            <div class="flex jc-center">
+                <div class="play-now adlinnaka">PLAY NOW</div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="screen-overlay none"></div>
+
     <div class="game hidden">
 
         <div class="game-image-wrapper flex">
