--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     
     </div>
 
+    <a href="https://github.com/JoyousJohn/ruguessr" target="_blank"><div class="src dizhitl">Source</div></a>
     <div class="ver dizhitl">V0.4.26.24<br>Not affiliated with Rutgers University</div>
 
     <div class="preload none"><div>
